deployment/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: freenet-org
  namespace: freenetorg
  annotations:
    cloud.google.com/backend-config: '{"default" : "backendconfig-prod"}'
    cloud.google.com/app-protocols: '{"my-port":"HTTP2"}'
    #cloud.google.com/neg: '{"exposed_ports": {"8080":{}}}'
spec:
  selector:
    app: freenet-org
  ports:
  - name: my-port
    port: 443
    protocol: TCP
    targetPort: 8433
  type: NodePort
