deployment/base/https-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: https-ingress
  namespace: freenetorg
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "freenet-org-prod-static"
    kubernetes.io/ingress.allow-http: "true"
    #networking.gke.io/managed-certificates: managed-cert
    kubernetes.io/ingress.class: "gce"
spec:
  defaultBackend:
    service:
      name: freenet-org
      port:
        number:
          8080
